# grimoire-keeper

./: .dockerignore  .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  SETUP.md  SETUP_API.md  SETUP_QUICK.md  TODO.md  docker-compose.prod.yml  podman-compose.yml  pyproject.toml  pytest.ini
.agents/skills/ship/: SKILL.md
.amazonq/rules/: development-workflow.md  project-setup.md
.claude/: settings.json
.claude/skills/plan-issue/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/start-issue/: SKILL.md
.codex/: hooks.json
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: ci.yml
apps/api/: Dockerfile  Dockerfile.prod  pyproject.toml
apps/api/src/grimoire_api/: __init__.py  config.py  dependencies.py  main.py
apps/api/src/grimoire_api/config/: markdown_jp.json
apps/api/src/grimoire_api/models/: database.py  external.py  request.py  response.py
apps/api/src/grimoire_api/repositories/: database.py  file_repository.py  job_repository.py  log_repository.py  page_repository.py
apps/api/src/grimoire_api/routers/: health.py  pages.py  process.py  retry.py  search.py
apps/api/src/grimoire_api/services/: base_processor.py  chunking_service.py  jina_client.py  job_worker.py  llm_service.py  page_service.py  retry_service.py  search_service.py  url_processor.py  vectorizer.py
apps/api/src/grimoire_api/utils/: chunking.py  database_init.py  exceptions.py  metrics.py  warnings_filter.py
apps/api/tests/: conftest.py  conftest_integration.py
apps/api/tests/integration/: test_api_endpoints.py  test_process_url.py
apps/api/tests/integration/services/: test_retry_flow.py
apps/api/tests/unit/models/: test_external.py
apps/api/tests/unit/repositories/: test_database.py  test_file_repository.py  test_job_repository.py  test_log_repository.py  test_page_repository.py
apps/api/tests/unit/routers/: conftest.py  test_health.py  test_pages.py  test_process.py  test_retry.py  test_search.py
apps/api/tests/unit/services/: test_base_processor.py  test_chunking_service.py  test_jina_client.py  test_job_worker.py  test_llm_service.py  test_page_service.py  test_retry_service.py  test_search_service.py  test_search_service_keywords.py  test_url_processor.py  test_vectorizer.py
apps/api/tests/unit/utils/: test_chunking.py
apps/bot/: Dockerfile  Dockerfile.prod  pyproject.toml
apps/bot/src/grimoire_bot/: __init__.py  main.py
apps/bot/src/grimoire_bot/handlers/: __init__.py  actions.py  commands.py  events.py  modals.py
apps/bot/src/grimoire_bot/services/: api_client.py
apps/bot/src/grimoire_bot/utils/: blocks.py  formatters.py  parsers.py
apps/bot/tests/: test_actions.py  test_api_client.py  test_blocks.py  test_formatters.py  test_handlers.py
apps/bot/tests/unit/utils/: test_parsers.py
apps/elysia/: Dockerfile
apps/web/: nginx.conf
apps/web/static/: bookmarklet.html  index.html  pages.html  register.html
apps/web/static/css/: style.css
apps/web/static/js/: api.js  pages.js  register.js  search.js
data/json/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
docs/: README.md  api-reference.md  architecture.md  backend-api-flow.md  backend-architecture.md  development.md  download-process.md  jina-ai-reader.md  llm-processing.md  retry-processing.md  slack-bot-usage.md  vectorization-process.md  web-ui-guide.md
prompts/: python-monorepo.md  setup-devcontainer.md
scripts/: batch_retry.py  check_services.py  db_cli.py  deploy.sh  dev.sh  init_database.py  load_secrets.sh  quick-deploy.sh  start.sh  test_clean.py
shared/: pyproject.toml
shared/src/grimoire_shared/: __init__.py  telemetry.py
