[project]
name = "grimoire-keeper"
version = "0.1.0"
description = "URL content summarization and search system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Grimoire Keeper Team"}
]
keywords = ["url", "summarization", "search", "ai", "llm", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

# ワークスペース設定
[tool.uv.workspace]
members = [
    "apps/bot",
    "apps/api",
    "shared"
]


[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-env>=1.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "apps/bot/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
    "-q",
    "--import-mode=importlib",
    "--cov=apps",
    "--cov-report=term-missing",
]
env = [
    "PYTHONWARNINGS=ignore",
    "ENV_FILE=.env.test",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["apps/bot", "apps/api/tests"]

[[tool.mypy.overrides]]
module = ["langdetect"]
ignore_missing_imports = true
