[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grimoire-shared"
version = "0.1.0"
description = "Shared utilities for Grimoire Keeper"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]