[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grimoire-api"
version = "0.1.0"
description = "FastAPI backend for Grimoire Keeper"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "weaviate-client>=4.4.0",
    "httpx>=0.25.0",
    "litellm>=1.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chonkie>=1.4.0",
    "numpy>=1.24.0",
    # OpenTelemetry
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-instrumentation-sqlite3>=0.42b0",
    # Shared module
    "grimoire-shared",
]

[tool.uv.sources]
grimoire-shared = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.10.0",
]
