[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grimoire-bot"
version = "0.1.0"
description = "Slack bot for Grimoire Keeper"
requires-python = ">=3.13"
dependencies = [
    "slack-bolt>=1.18.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.10.0",
]